--- a/demo/index.html
+++ b/demo/index.html
@@ -1,30 +1,22 @@
 <html>
   <head>
-    <link rel="stylesheet" href="demo/normalize.css" />
-    <link rel="stylesheet" href="demo/prism.css" />
+    <link rel="stylesheet" href="demo/css/normalize.css" />
+    <link rel="stylesheet" href="demo/css/prism.css" />
+    <link rel="stylesheet" href="demo/css/style.css" />
     <script src="demo/util.js"></script>
-    <style>
-      body { margin: 24px; }
-      .main {display: flex;}
-      .table-of-contents, .contents  {padding: 12px;}
-      hce-tabs {padding: 24px;} 
-      hce-tabs .contents pre {margin: 0; padding: 12px; white-space: pre-wrap;}
-      div[contents-for] b, pre b {background: rgba(255, 255, 0, 0.3); padding: 0 4px;}
-    </style>
   </head>
   <body>
-    <h1>My Javascript Package</h1>
     <div class="main">
-      <ul class="table-of-contents">
-        <li><a href="#home">home</a></li>
-      </ul>
-
       <hce-dyn-contents class="contents">
         <div url-match="^/$" import="demo/home.html"></div>
         <div url-match="home" import="demo/home.html"></div>
+        <div url-match="animate" import="demo/animate.html"></div>
       </hce-dyn-contents>
     </div>
-    
+    <div style="text-align: center">
+      <a href="#home">home</a></li>
+      <a href="#animate">animate</a></li>
+    </div>
   </body>
 </html>
 
